--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
 server.servlet.context-path=/springbootrest
+
+
+# to change the default API path
+#spring.data.rest.base-path=/<new_path>
