Adding Spring DataRest Support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=fals
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
-server.servlet.context-path=/springbootrest
+server.servlet.context-path=/api
 
 
 # to change the default API path
 #spring.data.rest.base-path=/<new_path>
+#spring.data.rest.default-page-size=/<default-sze>
+#spring.data.rest.max-page-size=/<max-size>
